--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
     <string name="app_name">WhatsappClone</string>
     <string name="welcome_to_whatsapp">Welcome to WhatsApp</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="like_message">Like message</string>
     <string name="verify_number">Verify %s</string>
     <string name="waiting_text">Waiting to autmatically detect an sms sent to \n %s Wrong Numer?</string>
     <string name="seconds_remaining">Remaining Time %d</string>
